--- a/HAR_LSTM.ipynb
+++ b/HAR_LSTM.ipynb
@@ -6,7 +6,7 @@
       "name": "HAR-LSTM.ipynb",
       "provenance": [],
       "mount_file_id": "1lpnt8Mngdvqm_RkxX9ywdfDxELxeppt5",
-      "authorship_tag": "ABX9TyNdMzcN4cmxBePfcGwm5JPm",
+      "authorship_tag": "ABX9TyMhm74Pei7Tw9YDj/wroGOu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -608,6 +608,113 @@
             "tags": []
           },
           "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zbhpdVbxgbJX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def confusion_matrix(Y_true, Y_pred):\n",
+        "    Y_true = pd.Series([ACTIVITIES[y] for y in np.argmax(Y_true, axis=1)])\n",
+        "    Y_pred = pd.Series([ACTIVITIES[y] for y in np.argmax(Y_pred, axis=1)])\n",
+        "\n",
+        "    return pd.crosstab(Y_true, Y_pred, rownames=['True'], colnames=['Pred'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g5-hS6x1gcIN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "8281c30e-d24a-4af5-e5e5-8effe90720d5"
+      },
+      "source": [
+        "# Confusion Matrix\n",
+        "print(confusion_matrix(y_test, model.predict(X_test)))"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Pred                LAYING  SITTING  ...  WALKING_DOWNSTAIRS  WALKING_UPSTAIRS\n",
+            "True                                 ...                                      \n",
+            "LAYING                 537        0  ...                   0                 0\n",
+            "SITTING                  0      421  ...                   0                 1\n",
+            "STANDING                 0      120  ...                   0                 0\n",
+            "WALKING                  0        0  ...                  12                16\n",
+            "WALKING_DOWNSTAIRS       0        0  ...                 401                 9\n",
+            "WALKING_UPSTAIRS         0        0  ...                   3               451\n",
+            "\n",
+            "[6 rows x 6 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EsIO2JyTghiV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "011aaa08-baa9-4cc9-ecf4-61876ce9e10d"
+      },
+      "source": [
+        "score = model.evaluate(X_test, y_test)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2947/2947 [==============================] - 1s 333us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EZAWmBxugnqc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0d4bd32c-e684-4a24-e0d5-3de28d296243"
+      },
+      "source": [
+        "score"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.28519427838435374, 0.9124533423820834]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
         }
       ]
     }
